# vulkan-guide

./: CMakeLists.txt  Cargo.toml  vulkan_guide.cpp
ch0/: main.rs  vk_engine.rs
ch1/: vk_engine.rs
shaders/: funky_triangle.frag  mesh.frag  mesh.vert  mesh_textured.frag  triangle.frag
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h  vulkan_guide.cpp  vulkan_guide.h
